Improved OpenGL support for GPU version. Added FUSE to enable AppImage applications, etc.

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -46,7 +46,10 @@ RUN apt-get update && apt-get install -y \
         golang \
         python-opencv \
         terminator \
-        libcanberra-gtk-module
+        libcanberra-gtk-module \
+        libfuse2 \
+        libnss3 \
+        fuse
 
 RUN pip3 --no-cache-dir install \
     gym[all]==0.9.4 \
@@ -65,7 +68,8 @@ RUN pip3 --no-cache-dir install \
     tqdm \
     pyopengl \
     mujoco-py==0.5.7 \
-    ipdb
+    ipdb \
+    cloudpickle
 
 # Set up permissions to use same UID and GID as host system user
 # https://denibertovic.com/posts/handling-permissions-with-docker-volumes/
