--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -20,47 +20,58 @@ RUN apt-get update && apt-get install -y \
     rm -rf /var/lib/apt/lists/*
 
 # install dependencies
-RUN apt-get update && apt-get install -y \
-        build-essential \
-        curl \
-        nano \
-        vim \
-        libfreetype6-dev \
-        libpng12-dev \
-        libzmq3-dev \
-        git \
-        python-numpy \
-        python-dev \
-        python-opengl \
-        cmake \
-        zlib1g-dev \
-        libjpeg-dev \
-        xvfb \
-        libav-tools \
-        xorg-dev \
-        libboost-all-dev \
-        libsdl2-dev \
-        swig \
-        libgtk2.0-dev \
-        wget \
-        unzip \
-        aptitude \
-        pkg-config \
-        qtbase5-dev \
-        libqt5opengl5-dev \
-        libassimp-dev \
-        libpython3.5-dev \
-        libboost-python-dev \
-        libtinyxml-dev \
-        golang \
-        python-opencv \
-        terminator \
-        tmux \
-        libcanberra-gtk-module \
-        libfuse2 \
-        libnss3 \
-        fuse \
-        python3-tk
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    build-essential \
+    curl \
+    nano \
+    vim \
+    libfreetype6-dev \
+    libpng12-dev \
+    libzmq3-dev \
+    git \
+    python-numpy \
+    python-dev \
+    python-opengl \
+    cmake \
+    zlib1g-dev \
+    libjpeg-dev \
+    xvfb \
+    libav-tools \
+    xorg-dev \
+    libboost-all-dev \
+    libsdl2-dev \
+    swig \
+    libgtk2.0-dev \
+    wget \
+    unzip \
+    aptitude \
+    pkg-config \
+    qtbase5-dev \
+    libqt5opengl5-dev \
+    libassimp-dev \
+    libpython3.5-dev \
+    libboost-python-dev \
+    libtinyxml-dev \
+    golang \
+    python-opencv \
+    terminator \
+    tmux \
+    libcanberra-gtk-module \
+    libfuse2 \
+    libnss3 \
+    fuse \
+    python3-tk \
+    libglfw3-dev \
+    libgl1-mesa-dev \
+    libgl1-mesa-glx \
+    libglew-dev \
+    libosmesa6-dev \
+    net-tools \
+    xpra \
+    xserver-xorg-dev \
+    libffi-dev
+
+RUN pip3 install --upgrade pip
 
 RUN pip3 --no-cache-dir install \
     gym[all]==0.9.4 \
@@ -117,6 +128,8 @@ RUN cd /opt && git clone https://github.com/olegklimov/bullet3 -b roboschool_sel
     && make install
 RUN pip3 install -e /opt/roboschool
 
+ENV DOCKER_HOME=$HOME
+
 COPY ./internal/ /
 
 # Install VirtualGL
@@ -124,7 +137,7 @@ RUN dpkg -i /virtualgl_2.5.2_amd64.deb && rm /virtualgl_2.5.2_amd64.deb
 
 # Install MuJoCo 1.50 and 1.31
 WORKDIR /opt
-RUN mkdir .mujoco && cd .mujoco \
+RUN mkdir mujoco && cd mujoco \
     && wget https://www.roboti.us/download/mjpro150_linux.zip \
     && unzip mjpro150_linux.zip \
     && rm mjpro150_linux.zip \
@@ -138,16 +151,28 @@ RUN mkdir .mujoco && cd .mujoco \
             cp mjkey.txt mjpro131/bin/ && \
             echo "Installed MuJoCo Key file." ; \
         else \
-            echo "Could not find MuJoCo key file (mjkey.txt) in ./internal!\nPlease copy it manually to /opt/.mujoco/..." 1>&2 ; \
+            echo "Could not find MuJoCo key file (mjkey.txt) in ./internal!\nPlease copy it manually to ~/.mujoco when inside the docker container." 1>&2 ; \
        fi
-ENV MUJOCO_KEY_FILE=/opt/mjkey.txt MUJOCO_PATH=/opt/mjpro131
+ENV MUJOCO_PY_MJPRO_PATH=/opt/mujoco/mjpro150
+ENV MUJOCO_LICENSE_KEY=/opt/mujoco/mjkey.txt
+ENV MUJOCO_PY_MUJOCO_PATH=/opt/mujoco
+ENV LD_LIBRARY_PATH /opt/mujoco/mjpro150/bin:$LD_LIBRARY_PATH
 
-RUN apt-get update && apt-get install -y \
-    apt-utils \
-    libffi-dev
 
-RUN cd /mujoco-py-master && pip install -r requirements.txt 
-RUN pip3 install -e /mujoco-py-master
+# Install mujoco-py
+RUN pip3 --no-cache-dir install mujoco-py==0.5.7
+# # see https://github.com/ryanjulian/mujoco-py/blob/master/Dockerfile
+# WORKDIR /opt
+# RUN curl -o /usr/local/bin/patchelf https://s3-us-west-2.amazonaws.com/openai-sci-artifacts/manual-builds/patchelf_0.9_amd64.elf \
+#     && chmod +x /usr/local/bin/patchelf
+
+# RUN git clone https://github.com/ryanjulian/mujoco-py.git
+# WORKDIR /opt/mujoco-py
+# RUN pip3 install -r requirements.txt
+# RUN pip3 install -r requirements.dev.txt
+# RUN python3 setup.py install
+# # Cythonize mujoco-py
+# RUN python3 -c "import mujoco_py; print('Successfully cythonized mujoco-py.')"
 
 # TensorBoard
 EXPOSE 6006
