nvidia-docker2 support, scripts for continuing stopped container

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,5 +1,57 @@
-FROM tensorflow/tensorflow:1.8.0-gpu-py3
+FROM ubuntu:16.04 as glvnd
 MAINTAINER Eric Heiden <heiden@usc.edu>
+
+# Set up libglvnd for OpenGL GUI support
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        git \
+        ca-certificates \
+        make \
+        automake \
+        autoconf \
+        libtool \
+        pkg-config \
+        python \
+        libxext-dev \
+        libx11-dev \
+        x11proto-gl-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+WORKDIR /opt/libglvnd
+RUN git clone --branch=v1.0.0 https://github.com/NVIDIA/libglvnd.git . && \
+    ./autogen.sh && \
+    ./configure --prefix=/usr/local --libdir=/usr/local/lib/x86_64-linux-gnu && \
+    make -j"$(nproc)" install-strip && \
+    find /usr/local/lib/x86_64-linux-gnu -type f -name 'lib*.la' -delete
+
+RUN dpkg --add-architecture i386 && \
+    apt-get update && apt-get install -y --no-install-recommends \
+        gcc-multilib \
+        libxext-dev:i386 \
+        libx11-dev:i386 && \
+    rm -rf /var/lib/apt/lists/*
+
+# 32-bit libraries
+RUN make distclean && \
+    ./autogen.sh && \
+    ./configure --prefix=/usr/local --libdir=/usr/local/lib/i386-linux-gnu --host=i386-linux-gnu "CFLAGS=-m32" "CXXFLAGS=-m32" "LDFLAGS=-m32" && \
+    make -j"$(nproc)" install-strip && \
+    find /usr/local/lib/i386-linux-gnu -type f -name 'lib*.la' -delete
+
+
+FROM tensorflow/tensorflow:1.8.0-gpu-py3
+
+COPY --from=glvnd /usr/local/lib/x86_64-linux-gnu /usr/local/lib/x86_64-linux-gnu
+COPY --from=glvnd /usr/local/lib/i386-linux-gnu /usr/local/lib/i386-linux-gnu
+
+COPY internal/10_nvidia.json /usr/local/share/glvnd/egl_vendor.d/10_nvidia.json
+
+RUN echo '/usr/local/lib/x86_64-linux-gnu' >> /etc/ld.so.conf.d/glvnd.conf && \
+    echo '/usr/local/lib/i386-linux-gnu' >> /etc/ld.so.conf.d/glvnd.conf && \
+    ldconfig
+
+ENV LD_LIBRARY_PATH /usr/local/lib/x86_64-linux-gnu:/usr/local/lib/i386-linux-gnu${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+
+ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES},display
 
 ARG USER
 ARG HOME
@@ -146,6 +198,7 @@ RUN pip3 --no-cache-dir install \
     six \
     pyprind \
     virtualenv
+
 
 # Set up permissions to use same UID and GID as host system user
 # https://denibertovic.com/posts/handling-permissions-with-docker-volumes/
